Updating project structure and deleting unused files.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,5 @@
+li { padding-right: 15px }
+small { font-size: 0.5em }
 .App {
   text-align: center;
 }
@@ -15,7 +17,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,14 +35,21 @@
     padding: 15px;
     margin: 0 auto;
 }
+
+section { margin-top: 60px }
+section .row, .container-table, .policies-table { padding-top: 15px }
+
 .form-signin > .form-label-group, .form-signin button {
   margin-top: 10px;
 }
 
+.search-buttons { text-align: left }
+.role-filters, .pagination-buttons { text-align: right }
+.pagination-buttons { padding-bottom: 15px }
 .container-table .filters-row { margin-top: 100px }
-.container-table { width: 100vh; font-size: 0.5em; margin-top: 100px }
-.container-table th { background-color: slategray }
+.container-table { font-size: 1em; }
+.container-table th, .policies-table th { background-color: slategray; color: white }
 .container-table th:nth-child(1) { width: 25% }
 .container-table th:nth-child(2) { width: 65% }
 .container-table th:nth-child(1) { width: 10% }
-.container-table .current { background-color: green }
+.container-table .current { background-color: green; color: white }
