--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,5 @@
+li { padding-right: 10px }
+
 .App {
   text-align: center;
 }
@@ -15,7 +17,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,8 +39,9 @@
   margin-top: 10px;
 }
 
+.container-table .filtering { margin-bottom: 15px; text-align: right }
 .container-table .filters-row { margin-top: 100px }
-.container-table { width: 100vh; font-size: 0.5em; margin-top: 100px }
+.container-table { width: 100vh; font-size: 0.8em; margin-top: 60px }
 .container-table th { background-color: slategray }
 .container-table th:nth-child(1) { width: 25% }
 .container-table th:nth-child(2) { width: 65% }
